feat: TrainDetailのロジックを返却形式の変更に合わせて修正